[gd_scene load_steps=4 format=3 uid="uid://bi2yquoper4ad"]

[ext_resource type="Script" path="res://scripts/asteroid.gd" id="1_1f2ia"]
[ext_resource type="Texture2D" uid="uid://crl2g43pffb28" path="res://assets/Asteroide1.png" id="1_bv1o4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dgfq8"]
radius = 45.0111

[node name="Asteroid" type="Area2D"]
script = ExtResource("1_1f2ia")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bv1o4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dgfq8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="TimerDelete" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TimerDelete" to="." method="_on_timer_delete_timeout"]
